#3437 Selective import of Foundation components

--- a/_includes/ad-desktop-1.html
+++ b/_includes/ad-desktop-1.html
@@ -1,5 +1,5 @@
-<div class="widget ads row hide-for-medium-down">
-  <div class="ad ad-desktop large-centered large-12 columns">
-    <img src="holder.js/980x150/text:Ad 980x150">
+<div class="widget ads l-container hide-for-medium-down">
+  <div class="ad ad-desktop large-centered l-row">
+    <img src="holder.js/980x150/text:Ad 980x150" alt="">
   </div>
 </div>
