--- a/_includes/ad-desktop-sidebar.html
+++ b/_includes/ad-desktop-sidebar.html
@@ -1,6 +1,7 @@
-<div class="ads ads-sidebar-wrapper row hide-for-medium-down">    <div class="ads-sidebar">
-      <div class="ad ad-desktop">
-          <img src="holder.js/180x500/text:180x500" />
-      </div>
+<div class="ads ads-sidebar-wrapper l-row hide-for-medium-down">
+  <div class="ads-sidebar">
+    <div class="ad ad-desktop">
+      <img src="holder.js/180x500/text:180x500" alt="">
     </div>
+  </div>
 </div>
