--- a/_includes/ad-mobile.html
+++ b/_includes/ad-mobile.html
@@ -1,5 +1,5 @@
-<div class="widget ads row show-for-small">
-  <div class="ad ad-phone small-centered small-12 columns">
-      <img src="holder.js/468x200/text:Ad 468x200" />
+<div class="widget ads l-container show-for-small">
+  <div class="ad ad-phone small-centered l-row">
+    <img src="holder.js/468x200/text:Ad 468x200" alt="">
   </div>
 </div>
