--- a/_sass/modules/_misc.scss
+++ b/_sass/modules/_misc.scss
@@ -142,7 +142,6 @@ li .published {
 
 // Elements
 .panel ul {
-  padding-left: 20px;
   font-size: 0.8em;
 }
 
@@ -152,6 +151,7 @@ li .published {
 
 .panel {
   background: #f6f6f6;
+  padding: 5px 15px;
 }
 
 .load-more {
