--- a/css/style.css
+++ b/css/style.css
@@ -3799,6 +3799,7 @@ figcaption {
 }
 figcaption p {
   margin: 0.71429em 0;
+  padding: 0 12px;
   font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
   font-size: 1em;
   line-height: inherit;
