--- a/_sass/partials/module/partials/_media.scss
+++ b/_sass/partials/module/partials/_media.scss
@@ -66,7 +66,7 @@ figcaption {
 }
 
 .image {
-  margin: 0 em(-15,20) 0 em(-15,20);
+  // margin: 0 em(-15,20) 0 em(-15,20); Not sure why this was needed?
 
   @include breakpoint($breakpoint-narrow) {
     margin: 0;
