--- a/css/ie.css
+++ b/css/ie.css
@@ -1574,14 +1574,14 @@ label small {
   border-bottom-right-radius: 1000px;
 }
 
-/* Separate prefix and postfix styles when on span so buttons keep their own */
-span.prefix {
+/* Separate prefix and postfix styles when on span or label so buttons keep their own */
+span.prefix, label.prefix {
   background: #f2f2f2;
   border-color: #d9d9d9;
   border-right: none;
   color: #333333;
 }
-span.prefix.radius {
+span.prefix.radius, label.prefix.radius {
   -webkit-border-radius: 0;
   border-radius: 0;
   -moz-border-radius-bottomleft: 3px;
@@ -1592,13 +1592,13 @@ span.prefix.radius {
   border-top-left-radius: 3px;
 }
 
-span.postfix {
+span.postfix, label.postfix {
   background: #f2f2f2;
   border-color: #cccccc;
   border-left: none;
   color: #333333;
 }
-span.postfix.radius {
+span.postfix.radius, label.postfix.radius {
   -webkit-border-radius: 0;
   border-radius: 0;
   -moz-border-radius-topright: 3px;
@@ -1759,16 +1759,30 @@ fieldset legend {
 }
 
 /* Error Handling */
-span.error, small.error {
+[data-abide] .error small.error, [data-abide] span.error, [data-abide] small.error {
   display: block;
   padding: 0.375em 0.25em;
-  margin-top: 0;
+  margin-top: -1.3125em;
   margin-bottom: 1em;
   font-size: 0.75em;
   font-weight: bold;
   background: #c60f13;
   color: white;
+  margin-top: 0;
+}
+[data-abide] span.error, [data-abide] small.error {
   display: none;
+}
+
+span.error, small.error {
+  display: block;
+  padding: 0.375em 0.25em;
+  margin-top: -1.3125em;
+  margin-bottom: 1em;
+  font-size: 0.75em;
+  font-weight: bold;
+  background: #c60f13;
+  color: white;
 }
 
 .error input,
@@ -1791,7 +1805,7 @@ span.error, small.error {
 .error small.error {
   display: block;
   padding: 0.375em 0.25em;
-  margin-top: 0;
+  margin-top: -1.3125em;
   margin-bottom: 1em;
   font-size: 0.75em;
   font-weight: bold;
