--- a/_includes/menu-top.html
+++ b/_includes/menu-top.html
@@ -53,7 +53,7 @@
       <li><a href="#">Reise</a></li>
       <li class="divider"></li>
       <li><a href="#">Om oss</a></li>
-      <li><a href="#">A-Å</a></li>
+      <li><a href="/arkiv">Arkiv</a></li>
     </ul>
   </div>
 </nav>
