--- a/_sass/modules/_misc.scss
+++ b/_sass/modules/_misc.scss
@@ -158,6 +158,13 @@ li .published {
   margin-top: 40px;
 }
 
+// Background for headings and text that is above something else
+
+.bg-light {
+  background: #fff;
+  padding: 2px 4px;
+}
+
 // Site footer
 .site-footer {
   background: #eee;
