--- a/_sass/partials/module/_module.scss
+++ b/_sass/partials/module/_module.scss
@@ -15,3 +15,4 @@
 // @import 'partials/author'; not in use.
 @import 'partials/buttons';
 @import 'partials/search';
+@import 'partials/newsletter';
