--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ img, video {
   clear: both;
 }
 
-/* normalize.css v2.1.1 | MIT License | git.io/normalize */
+/*! normalize.css v2.1.1 | MIT License | git.io/normalize */
 /* ==========================================================================
    HTML5 display definitions
    ========================================================================== */
@@ -4085,6 +4085,10 @@ figcaption p {
   }
 }
 
+.newsletter-form {
+  margin-top: 106px;
+}
+
 .is-popular {
   background: #FFFFE5;
 }
@@ -4241,6 +4245,11 @@ li .published {
 
 .load-more {
   margin-top: 40px;
+}
+
+.bg-light {
+  background: #fff;
+  padding: 2px 4px;
 }
 
 .site-footer {
