Link to Nyhetsbrev page

--- a/_includes/menu-top.html
+++ b/_includes/menu-top.html
@@ -52,7 +52,7 @@
       <li><a href="#">Bildeserier</a></li>
       <li><a href="#">Reise</a></li>
       <li class="divider"></li>
-      <li><a href="#">Om oss</a></li>
+      <li><a href="/nyhetsbrev">Nyhetsbrev</a></li>
       <li><a href="/arkiv">Arkiv</a></li>
     </ul>
   </div>
