--- a/_sass/modules/_misc.scss
+++ b/_sass/modules/_misc.scss
@@ -143,6 +143,7 @@ li .published {
 // Elements
 .panel ul {
   font-size: 0.8em;
+  margin-left: 15px;
 }
 
 .panel li {
@@ -152,6 +153,7 @@ li .published {
 .panel {
   background: #f6f6f6;
   padding: 5px 15px;
+  margin-bottom: 20px;
 }
 
 .load-more {
