--- a/css/style.css
+++ b/css/style.css
@@ -4232,6 +4232,7 @@ li .published {
 
 .panel ul {
   font-size: 0.8em;
+  margin-left: 15px;
 }
 
 .panel li {
@@ -4241,6 +4242,7 @@ li .published {
 .panel {
   background: #f6f6f6;
   padding: 5px 15px;
+  margin-bottom: 20px;
 }
 
 .load-more {
