--- a/_includes/scripts-global.html
+++ b/_includes/scripts-global.html
@@ -6,6 +6,9 @@
   <script src="/js/vendor/holder.js"></script>
   <script src="/js/vendor/classie.js"></script>
 
+  <script src="/js/vendor/json3.min.js"></script>
+  <script src="/js/vendor/matchMedia.js"></script>
+  <script src="/js/vendor/matchMedia.addListener.js"></script>
   <script src="/js/vendor/enquire.min.js"></script>
   <script src="/js/vendor/waypoints.min.js"></script>
 
