Removed holder.js dependency

--- a/_includes/scripts-global.html
+++ b/_includes/scripts-global.html
@@ -3,7 +3,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/fitvids/1.0.1/jquery.fitvids.min.js"></script>
   <script src="/js/foundation.min.js"></script>
   <script src="/js/vendor/custom.modernizr.js"></script>
-  <script src="/js/vendor/holder.js"></script>
+  <!-- script src="/js/vendor/holder.js"></script -->
   <script src="/js/vendor/classie.js"></script>
 
   <script src="/js/vendor/json3.min.js"></script>
