--- a/_layouts/mag.html
+++ b/_layouts/mag.html
@@ -5,6 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>{% if page.title %} {{ page.title }} | {% endif %} NewsFront</title>
+
+  <!--[if lt IE 9]>
+    <script src="/js/vendor/html5shiv.js"></script>
+    <script src="/js/vendor/nwmatcher-1.2.5-min.js"></script>
+    <script src="/js/vendor/selectivizr-min.js"></script>
+    <script type="text/javascript">
+      if (!window.console) console = { log: function(){} };
+    </script>
+  <![endif]-->
+
   <link href="/css/style.css" rel="stylesheet">
 </head>
 <body>
