Minor styling changes for search bar and top menu

--- a/_includes/menu-top.html
+++ b/_includes/menu-top.html
@@ -1,11 +1,9 @@
 
-<div>
-  <form class="nf-searchbar" action="/s/" method="get">
-    <div>
-      <input type="text" name="q" placeholder="Søk Newsfront...">
-      <input type="submit" value="">
-      <span class="nf-search-cancel"></span>
-    </div>
+<div class="nf-searchbar">
+  <form action="/s/" method="get">
+    <input type="text" name="q" placeholder="Søk Newsfront...">
+    <input type="submit" value="">
+    <span class="nf-search-cancel"></span>
   </form>
 </div>
 
