--- a/_sass/modules/_searchbar.scss
+++ b/_sass/modules/_searchbar.scss
@@ -1,12 +1,13 @@
 .nf-searchbar {
   position: relative;
+  overflow: hidden;
   display: none;
-  width: 100%;
-  margin: 0;
-  padding: 10px;
   background: #373737;
-  div {
+  form {
     position: relative;
+    display: block;
+    margin: 0;
+    padding: 10px;
   }
   input[type="text"] {
     display: block;
@@ -28,7 +29,7 @@
   input[type="submit"], span.nf-search-button, span.nf-search-cancel  {
     position: absolute;
     z-index: 20;
-    top: 0;
+    top: 10px;
     right: 10px;
     display: block;
     width: 50px;
